<resources>
    <string name="app_name">Speculator</string>
    <string name="name_pouch">Название кошелька</string>
    <string name="general_settings">Общие настройки</string>
    <string name="pouch_settings">Настройки кошельков</string>
    <string name="sum">Сумма</string>
    <string name="addDelete">Добавить/Удалить</string>
    <string name="addWallet">Добавить кошелек</string>
    <string name="amendWallet">Изменить кошелек</string>
    <string name="deleteWallet">Удалить кошелек</string>
    <string name="wallet">Кошелек</string>
    <string name="date">Дата</string>
    <string name="description">Описание</string>
    <string name="Fix">Зафиксировать</string>
    <string name="Not_selected_wallet">Не выбран кошелек</string>
    
    <string name="category">Категория</string>
    <string name="subcategory">Подкатегория</string>
    <string name="add">Добавить</string>
    <string name="controlBudget">Контроль бюджета</string>
    <string name="editArcticle">Изменить артикул</string>
    <string name="addArticle">Добавить статью</string>
    <string name="deleteArticle">Удалить статью</string>
    <string name="main_wallet">Главный кошелек</string>
    <string name="default_activity">Страница по умолчанию</string>
    <string name="save">Сохранить</string>
    <string name="clear_all_saves">Очистить все сохранения и восстановить настройки по умолчанию</string>

    <string name="main_activity">Главная страница</string>
    <string name="budget_control_activity">Страница контроля бюджета</string>
    
    <!-- Statistic_budget_activity -->
    <string name="quikly_select_period">Быстро выбрать период</string>
    <string name="list_all_income_and_expenses">Вывести все доходы и расходы</string>
    <string name="display_by_category">Вывести по категориям</string>
    <string name="text">Текст</string>
    <string name="timetable">График</string>
    <string name="statistic">Статистика</string>

    <!-- AllertDialog -->
    <string name="Delete_all_files_preserving_and_recreate_them">Удалить все сохранения и данные и восстановить настройки по умолчанию?
        Это приведет к потере всех записанных данных</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    
    <!-- Messages -->


    <!--Test Navigation Drawer -->
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Домой</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
</resources>
