<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/fone_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_wallet"
        android:id="@+id/textMainWallet"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
         />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerMainWallet"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textMainWallet"
        android:layout_toEndOf="@+id/textMainWallet" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerMainWallet"
        android:text="@string/default_activity"
        android:id="@+id/textDefaultActivity"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDefaultActivity"
        android:layout_below="@+id/spinnerMainWallet"
        android:layout_toRightOf="@+id/textDefaultActivity"
        android:entries="@array/array_activityes"
        />
    <Button
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clearButton"
        android:layout_below="@+id/spinnerDefaultActivity"
        android:text="@string/clear_all_saves"
        android:onClick="clearButton_Click"
        />

    <Button
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"

        android:onClick="saveButton_Click"/>


</RelativeLayout>